Start Menu Stuff

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ div.game_wrapper {
 
 p.footer {
     font-family: verdana;
-    color: #7A7A7A;
+    color: #240909;
     font-size: 10px;
     text-align: center;
 }
